--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     
-    <title>Clicky Game</title>
+    <title>Walking Dead Game</title>
   </head>
   <body>
     <noscript>
